k8s/ingress/ingress-green.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-green
  namespace: green
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: nps-green.capstone5b4.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
